# kiwix-llm

./: .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  config.example.yaml  download-zims.sh  install.sh  pyproject.toml  service.sh  setup.sh
src/zim_rag/: __init__.py  cli.py  config.py  info.py  ingest.py  query.py  serve.py
tests/: test_dark_mode.py  test_ingest_priority.py  test_query.py  test_retrieval_diversity.py  test_serve_ui.py
