[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zim-rag"
version = "0.1.0"
description = "Offline RAG system combining Kiwix ZIM archives with local LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "zim-rag contributors" },
]
keywords = ["kiwix", "zim", "rag", "llm", "offline", "knowledge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "libzim>=3.4.0",
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "ollama>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
zim-rag = "zim_rag.cli:main"

[project.urls]
Homepage = "https://github.com/yitch/kiwix-llm"
Issues = "https://github.com/yitch/kiwix-llm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zim_rag"]

[tool.hatch.build.targets.sdist]
include = ["src/zim_rag"]
